JB_F1_DataModernization/files/gen/DDLParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 DDL.g 2014-03-21 11:00:08

	import gts.modernization.model.CST.impl.*;
	import gts.modernization.model.CST.*;
	import java.util.Iterator;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
public class DDLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "CVALUE", "TYPE", "NUMBER", "WS", "ML_COMMENT", "OL_COMMENT", "'CREATE'", "'OR REPLACE'", "'TABLE'", "'('", "','", "')'", "'LOGGING'", "'NOCOMPRESS'", "'NOCACHE'", "'NOPARALLEL'", "'MONITORING'", "';'", "'COMMENT ON TABLE'", "'IS'", "'BYTE'", "'CONSTRAINT'", "'NULL'", "'NOT NULL'", "'DEFAULT'", "'COMMENT ON COLUMN'", "'\\.'", "'CHECK'", "'IN'", "'FOREIGN'", "'KEY'", "'REFERENCES'", "'ON'", "'DELETE'", "'UPDATE'", "'CASCADE'", "'DISABLE'", "'PRIMARY KEY'", "'DATABASE'", "'SCHEMA'", "'IF NOT EXISTS'", "'CHARACTER'", "'SET'", "'='", "'COLLATE'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int ID=4;
    public static final int EOF=-1;
    public static final int TYPE=6;
    public static final int ML_COMMENT=9;
    public static final int T__19=19;
    public static final int T__16=16;
    public static final int T__15=15;
    public static final int T__18=18;
    public static final int T__17=17;
    public static final int T__12=12;
    public static final int T__11=11;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int NUMBER=7;
    public static final int OL_COMMENT=10;
    public static final int CVALUE=5;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=8;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;

    // delegates
    // delegators


        public DDLParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public DDLParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected StringTemplateGroup templateLib =
      new StringTemplateGroup("DDLParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib(StringTemplateGroup templateLib) {
      this.templateLib = templateLib;
    }
    public StringTemplateGroup getTemplateLib() {
      return templateLib;
    }
    /** allows convenient multi-value initialization:
     *  "new STAttrMap().put(...).put(...)"
     */
    public static class STAttrMap extends HashMap {
      public STAttrMap put(String attrName, Object value) {
        super.put(attrName, value);
        return this;
      }
      public STAttrMap put(String attrName, int value) {
        super.put(attrName, new Integer(value));
        return this;
      }
    }

    public String[] getTokenNames() { return DDLParser.tokenNames; }
    public String getGrammarFileName() { return "DDL.g"; }


    public static class data_definition_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "data_definition"
    // DDL.g:18:1: data_definition returns [Node returnNode] : (data_definition_statementGen+= data_definition_statement )* ;
    public final DDLParser.data_definition_return data_definition() throws RecognitionException {
        DDLParser.data_definition_return retval = new DDLParser.data_definition_return();
        retval.start = input.LT(1);

        List list_data_definition_statementGen=null;
        RuleReturnScope data_definition_statementGen = null;
        try {
            // DDL.g:19:1: ( (data_definition_statementGen+= data_definition_statement )* )
            // DDL.g:19:4: (data_definition_statementGen+= data_definition_statement )*
            {
            // DDL.g:19:4: (data_definition_statementGen+= data_definition_statement )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==11||LA1_0==23||LA1_0==30) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // DDL.g:19:6: data_definition_statementGen+= data_definition_statement
            	    {
            	    pushFollow(FOLLOW_data_definition_statement_in_data_definition49);
            	    data_definition_statementGen=data_definition_statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if (list_data_definition_statementGen==null) list_data_definition_statementGen=new ArrayList();
            	    list_data_definition_statementGen.add(data_definition_statementGen);


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            if ( state.backtracking==0 ) {

              		// Create return CST Node
              		Node data_definitionReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
              		data_definitionReturnNode.setKind("data_definition");
              	    // Create a CST Node
              		if(list_data_definition_statementGen != null) {
              	        for(Iterator it = list_data_definition_statementGen.iterator(); it.hasNext(); )  { 
              	            DDLParser.data_definition_statement_return r = (DDLParser.data_definition_statement_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("data_definition_statement");
              	            	data_definitionReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }
              		// Returns the Node with CST Leaves/Nodes
              		retval.returnNode = data_definitionReturnNode;
              	
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "data_definition"

    public static class data_definition_statement_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "data_definition_statement"
    // DDL.g:39:1: data_definition_statement returns [Node returnNode] : (create_databaseGen+= create_database | create_tableGen+= create_table | create_comment_tableGen+= create_comment_table | create_comment_columnGen+= create_comment_column );
    public final DDLParser.data_definition_statement_return data_definition_statement() throws RecognitionException {
        DDLParser.data_definition_statement_return retval = new DDLParser.data_definition_statement_return();
        retval.start = input.LT(1);

        List list_create_databaseGen=null;
        List list_create_tableGen=null;
        List list_create_comment_tableGen=null;
        List list_create_comment_columnGen=null;
        RuleReturnScope create_databaseGen = null;
        RuleReturnScope create_tableGen = null;
        RuleReturnScope create_comment_tableGen = null;
        RuleReturnScope create_comment_columnGen = null;
        try {
            // DDL.g:40:1: (create_databaseGen+= create_database | create_tableGen+= create_table | create_comment_tableGen+= create_comment_table | create_comment_columnGen+= create_comment_column )
            int alt2=4;
            switch ( input.LA(1) ) {
            case 11:
                {
                int LA2_1 = input.LA(2);

                if ( ((LA2_1>=12 && LA2_1<=13)) ) {
                    alt2=2;
                }
                else if ( ((LA2_1>=43 && LA2_1<=44)) ) {
                    alt2=1;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;
                }
                }
                break;
            case 23:
                {
                alt2=3;
                }
                break;
            case 30:
                {
                alt2=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // DDL.g:40:5: create_databaseGen+= create_database
                    {
                    pushFollow(FOLLOW_create_database_in_data_definition_statement75);
                    create_databaseGen=create_database();

                    state._fsp--;
                    if (state.failed) return retval;
                    if (list_create_databaseGen==null) list_create_databaseGen=new ArrayList();
                    list_create_databaseGen.add(create_databaseGen);

                    if ( state.backtracking==0 ) {

                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_create_databaseGen != null) {
                      	        for(Iterator it = list_create_databaseGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.create_database_return r = (DDLParser.create_database_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("create_database");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;
                case 2 :
                    // DDL.g:58:5: create_tableGen+= create_table
                    {
                    pushFollow(FOLLOW_create_table_in_data_definition_statement87);
                    create_tableGen=create_table();

                    state._fsp--;
                    if (state.failed) return retval;
                    if (list_create_tableGen==null) list_create_tableGen=new ArrayList();
                    list_create_tableGen.add(create_tableGen);

                    if ( state.backtracking==0 ) {

                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_create_tableGen != null) {
                      	        for(Iterator it = list_create_tableGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.create_table_return r = (DDLParser.create_table_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("create_table");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;
                case 3 :
                    // DDL.g:76:5: create_comment_tableGen+= create_comment_table
                    {
                    pushFollow(FOLLOW_create_comment_table_in_data_definition_statement99);
                    create_comment_tableGen=create_comment_table();

                    state._fsp--;
                    if (state.failed) return retval;
                    if (list_create_comment_tableGen==null) list_create_comment_tableGen=new ArrayList();
                    list_create_comment_tableGen.add(create_comment_tableGen);

                    if ( state.backtracking==0 ) {

                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_create_comment_tableGen != null) {
                      	        for(Iterator it = list_create_comment_tableGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.create_comment_table_return r = (DDLParser.create_comment_table_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("create_comment_table");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;
                case 4 :
                    // DDL.g:94:5: create_comment_columnGen+= create_comment_column
                    {
                    pushFollow(FOLLOW_create_comment_column_in_data_definition_statement111);
                    create_comment_columnGen=create_comment_column();

                    state._fsp--;
                    if (state.failed) return retval;
                    if (list_create_comment_columnGen==null) list_create_comment_columnGen=new ArrayList();
                    list_create_comment_columnGen.add(create_comment_columnGen);

                    if ( state.backtracking==0 ) {

                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_create_comment_columnGen != null) {
                      	        for(Iterator it = list_create_comment_columnGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.create_comment_column_return r = (DDLParser.create_comment_column_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("create_comment_column");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "data_definition_statement"

    public static class create_table_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "create_table"
    // DDL.g:114:1: create_table returns [Node returnNode] : TK_0= 'CREATE' (TK_1= 'OR REPLACE' )? TK_2= 'TABLE' IDGen= ID TK_3= '(' (create_columnGen+= create_column )* (TK_4= ',' )? (create_pkGen+= create_pk )? (TK_5= ',' )? (create_fkGen+= create_fk (TK_6= ',' )? )* (create_ckGen+= create_ck (TK_7= ',' )? )* TK_8= ')' (TK_9= 'LOGGING' )? (TK_10= 'NOCOMPRESS' )? (TK_11= 'NOCACHE' )? (TK_12= 'NOPARALLEL' )? (TK_13= 'MONITORING' )? TK_14= ';' ;
    public final DDLParser.create_table_return create_table() throws RecognitionException {
        DDLParser.create_table_return retval = new DDLParser.create_table_return();
        retval.start = input.LT(1);

        Token TK_0=null;
        Token TK_1=null;
        Token TK_2=null;
        Token IDGen=null;
        Token TK_3=null;
        Token TK_4=null;
        Token TK_5=null;
        Token TK_6=null;
        Token TK_7=null;
        Token TK_8=null;
        Token TK_9=null;
        Token TK_10=null;
        Token TK_11=null;
        Token TK_12=null;
        Token TK_13=null;
        Token TK_14=null;
        List list_create_columnGen=null;
        List list_create_pkGen=null;
        List list_create_fkGen=null;
        List list_create_ckGen=null;
        RuleReturnScope create_columnGen = null;
        RuleReturnScope create_pkGen = null;
        RuleReturnScope create_fkGen = null;
        RuleReturnScope create_ckGen = null;
        try {
            // DDL.g:115:1: (TK_0= 'CREATE' (TK_1= 'OR REPLACE' )? TK_2= 'TABLE' IDGen= ID TK_3= '(' (create_columnGen+= create_column )* (TK_4= ',' )? (create_pkGen+= create_pk )? (TK_5= ',' )? (create_fkGen+= create_fk (TK_6= ',' )? )* (create_ckGen+= create_ck (TK_7= ',' )? )* TK_8= ')' (TK_9= 'LOGGING' )? (TK_10= 'NOCOMPRESS' )? (TK_11= 'NOCACHE' )? (TK_12= 'NOPARALLEL' )? (TK_13= 'MONITORING' )? TK_14= ';' )
            // DDL.g:115:4: TK_0= 'CREATE' (TK_1= 'OR REPLACE' )? TK_2= 'TABLE' IDGen= ID TK_3= '(' (create_columnGen+= create_column )* (TK_4= ',' )? (create_pkGen+= create_pk )? (TK_5= ',' )? (create_fkGen+= create_fk (TK_6= ',' )? )* (create_ckGen+= create_ck (TK_7= ',' )? )* TK_8= ')' (TK_9= 'LOGGING' )? (TK_10= 'NOCOMPRESS' )? (TK_11= 'NOCACHE' )? (TK_12= 'NOPARALLEL' )? (TK_13= 'MONITORING' )? TK_14= ';'
            {
            TK_0=(Token)match(input,11,FOLLOW_11_in_create_table135); if (state.failed) return retval;
            // DDL.g:115:18: (TK_1= 'OR REPLACE' )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==12) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // DDL.g:115:20: TK_1= 'OR REPLACE'
                    {
                    TK_1=(Token)match(input,12,FOLLOW_12_in_create_table141); if (state.failed) return retval;

                    }
                    break;

            }

            TK_2=(Token)match(input,13,FOLLOW_13_in_create_table148); if (state.failed) return retval;
            IDGen=(Token)match(input,ID,FOLLOW_ID_in_create_table153); if (state.failed) return retval;
            TK_3=(Token)match(input,14,FOLLOW_14_in_create_table158); if (state.failed) return retval;
            // DDL.g:115:74: (create_columnGen+= create_column )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ID) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // DDL.g:115:76: create_columnGen+= create_column
            	    {
            	    pushFollow(FOLLOW_create_column_in_create_table164);
            	    create_columnGen=create_column();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if (list_create_columnGen==null) list_create_columnGen=new ArrayList();
            	    list_create_columnGen.add(create_columnGen);


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            // DDL.g:115:110: (TK_4= ',' )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==15) ) {
                int LA5_1 = input.LA(2);

                if ( (synpred7_DDL()) ) {
                    alt5=1;
                }
            }
            switch (alt5) {
                case 1 :
                    // DDL.g:115:112: TK_4= ','
                    {
                    TK_4=(Token)match(input,15,FOLLOW_15_in_create_table172); if (state.failed) return retval;

                    }
                    break;

            }

            // DDL.g:115:124: (create_pkGen+= create_pk )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==26) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==ID) ) {
                    int LA6_3 = input.LA(3);

                    if ( (LA6_3==42) ) {
                        alt6=1;
                    }
                }
            }
            switch (alt6) {
                case 1 :
                    // DDL.g:115:126: create_pkGen+= create_pk
                    {
                    pushFollow(FOLLOW_create_pk_in_create_table181);
                    create_pkGen=create_pk();

                    state._fsp--;
                    if (state.failed) return retval;
                    if (list_create_pkGen==null) list_create_pkGen=new ArrayList();
                    list_create_pkGen.add(create_pkGen);


                    }
                    break;

            }

            // DDL.g:115:152: (TK_5= ',' )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==15) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // DDL.g:115:154: TK_5= ','
                    {
                    TK_5=(Token)match(input,15,FOLLOW_15_in_create_table189); if (state.failed) return retval;

                    }
                    break;

            }

            // DDL.g:115:166: (create_fkGen+= create_fk (TK_6= ',' )? )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==26) ) {
                    int LA9_1 = input.LA(2);

                    if ( (LA9_1==ID) ) {
                        int LA9_3 = input.LA(3);

                        if ( (LA9_3==34) ) {
                            alt9=1;
                        }


                    }


                }


                switch (alt9) {
            	case 1 :
            	    // DDL.g:115:168: create_fkGen+= create_fk (TK_6= ',' )?
            	    {
            	    pushFollow(FOLLOW_create_fk_in_create_table198);
            	    create_fkGen=create_fk();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if (list_create_fkGen==null) list_create_fkGen=new ArrayList();
            	    list_create_fkGen.add(create_fkGen);

            	    // DDL.g:115:192: (TK_6= ',' )?
            	    int alt8=2;
            	    int LA8_0 = input.LA(1);

            	    if ( (LA8_0==15) ) {
            	        alt8=1;
            	    }
            	    switch (alt8) {
            	        case 1 :
            	            // DDL.g:115:194: TK_6= ','
            	            {
            	            TK_6=(Token)match(input,15,FOLLOW_15_in_create_table204); if (state.failed) return retval;

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);

            // DDL.g:115:206: (create_ckGen+= create_ck (TK_7= ',' )? )*
            loop11:
            do {
                int alt11=2;
                int LA11_0 = input.LA(1);

                if ( (LA11_0==26) ) {
                    alt11=1;
                }


                switch (alt11) {
            	case 1 :
            	    // DDL.g:115:208: create_ckGen+= create_ck (TK_7= ',' )?
            	    {
            	    pushFollow(FOLLOW_create_ck_in_create_table213);
            	    create_ckGen=create_ck();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if (list_create_ckGen==null) list_create_ckGen=new ArrayList();
            	    list_create_ckGen.add(create_ckGen);

            	    // DDL.g:115:232: (TK_7= ',' )?
            	    int alt10=2;
            	    int LA10_0 = input.LA(1);

            	    if ( (LA10_0==15) ) {
            	        alt10=1;
            	    }
            	    switch (alt10) {
            	        case 1 :
            	            // DDL.g:115:234: TK_7= ','
            	            {
            	            TK_7=(Token)match(input,15,FOLLOW_15_in_create_table219); if (state.failed) return retval;

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);

            TK_8=(Token)match(input,16,FOLLOW_16_in_create_table231); if (state.failed) return retval;
            // DDL.g:115:260: (TK_9= 'LOGGING' )?
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( (LA12_0==17) ) {
                alt12=1;
            }
            switch (alt12) {
                case 1 :
                    // DDL.g:115:262: TK_9= 'LOGGING'
                    {
                    TK_9=(Token)match(input,17,FOLLOW_17_in_create_table237); if (state.failed) return retval;

                    }
                    break;

            }

            // DDL.g:115:279: (TK_10= 'NOCOMPRESS' )?
            int alt13=2;
            int LA13_0 = input.LA(1);

            if ( (LA13_0==18) ) {
                alt13=1;
            }
            switch (alt13) {
                case 1 :
                    // DDL.g:115:281: TK_10= 'NOCOMPRESS'
                    {
                    TK_10=(Token)match(input,18,FOLLOW_18_in_create_table245); if (state.failed) return retval;

                    }
                    break;

            }

            // DDL.g:115:302: (TK_11= 'NOCACHE' )?
            int alt14=2;
            int LA14_0 = input.LA(1);

            if ( (LA14_0==19) ) {
                alt14=1;
            }
            switch (alt14) {
                case 1 :
                    // DDL.g:115:304: TK_11= 'NOCACHE'
                    {
                    TK_11=(Token)match(input,19,FOLLOW_19_in_create_table253); if (state.failed) return retval;

                    }
                    break;

            }

            // DDL.g:115:322: (TK_12= 'NOPARALLEL' )?
            int alt15=2;
            int LA15_0 = input.LA(1);

            if ( (LA15_0==20) ) {
                alt15=1;
            }
            switch (alt15) {
                case 1 :
                    // DDL.g:115:324: TK_12= 'NOPARALLEL'
                    {
                    TK_12=(Token)match(input,20,FOLLOW_20_in_create_table261); if (state.failed) return retval;

                    }
                    break;

            }

            // DDL.g:115:345: (TK_13= 'MONITORING' )?
            int alt16=2;
            int LA16_0 = input.LA(1);

            if ( (LA16_0==21) ) {
                alt16=1;
            }
            switch (alt16) {
                case 1 :
                    // DDL.g:115:347: TK_13= 'MONITORING'
                    {
                    TK_13=(Token)match(input,21,FOLLOW_21_in_create_table269); if (state.failed) return retval;

                    }
                    break;

            }

            TK_14=(Token)match(input,22,FOLLOW_22_in_create_table275); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
